--- a/index.html
+++ b/index.html
@@ -24,8 +24,31 @@
      </style>
 </head>
 
-<body>
-    <h1>hello world</h1>
+<body class="border border-red-500 h-screen bg-[#ecf1ff] px-5">
+    <nav class="max-w-[1536px] mx-auto flex justify-between bg-white p-6 rounded-2xl mt-6" id="">
+        <div class=" flex items-center gap-2">
+            <div class="">
+                <img src="assets/logo.png" alt="">
+            </div>
+            <h1 class="hidden md:block">
+                <span class="font-light text-4xl">Dev</span>
+                <span class="font-bold text-4xl">Board</span>
+            </h1>
+        </div>
+        <div class="flex  items-center gap-9">
+            <div class="flex items-center gap-2">
+                <img src="assets/checkbox.png" alt="">
+                <h2 class="">23</h2>
+            </div>
+            <div class="">
+                <img src="assets/theme-btn.png" alt="">
+            </div>
+        </div>
+
+    </nav>
+    <main class="" id="">
+
+    </main>
 </body>
 
 </html>
